--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,40 @@
-/vendor/
-node_modules/
+# Dependências
+**/vendor/
+**/node_modules/
+
+# Arquivos de Sistema e IDEs
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/*.log
+*.swp
+*.swo
+
+# Logs e Debug
 npm-debug.log
 yarn-error.log
+*.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
+# Env
+**/.env
+**/.env.backup
+**/.env.production
 auth.json
+
+# Laravel
+**/storage/*.key
+
+# Ignora o link simbólico de storage na pasta public
+**/public/storage
+**/public/hot
+**/public/build
+
+# Cache do PHPUnit
+.phpunit.result.cache
+.phpunit.cache/
+
+# Laravel Pail (Logs em tempo real)
+**/storage/pail
+
+# Arquivos gerados pelo indexador de PHP
+**/.phpactor.json
