--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,10 +17,9 @@ RUN docker-php-ext-install \
     bcmath
 
 # Xdebug
+COPY .devcontainer/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
-
-COPY .devcontainer/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # Habilita Mod Rewrite do Apache
 RUN a2enmod rewrite
@@ -30,5 +29,8 @@ COPY .devcontainer/apache-config.conf /etc/apache2/sites-available/000-default.c
 
 # Composer oficial
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+RUN chown -R www-data:www-data /var/www/html
+RUN touch /tmp/xdebug.log && chmod 777 /tmp/xdebug.log
 
 WORKDIR /var/www/html
