--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ..:/var/www/html
+      - ..:/var/www/html:z
     depends_on:
       - db
     networks:
@@ -27,7 +27,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "1.50"
+          cpus: "2.00"
           memory: 1024M
         reservations:
           cpus: "0.10"
@@ -41,7 +41,7 @@ services:
     env_file:
       - ../.env
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data:z
     networks:
       - app-network
     deploy:
