--- a/.devcontainer/xdebug.ini
+++ b/.devcontainer/xdebug.ini
@@ -2,3 +2,4 @@ xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.client_port=9003
 xdebug.client_host=host.docker.internal
+xdebug.log=/tmp/xdebug.log
