--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Listen for Xdebug on 9003 (0.0.0.0)",
+      "name": "Listen for Xdebug (Docker)",
       "type": "php",
       "request": "launch",
       "port": 9003,
       "hostname": "0.0.0.0",
+
       "pathMappings": {
         "/var/www/html": "${workspaceRoot}"
       }
