--- a/src/vanilla/composer.json
+++ b/src/vanilla/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": "^8.2",
     "ext-pdo": "*",
-    "ext-pdo_pgsql": "*"
+    "ext-pdo_pgsql": "*",
+    "guzzlehttp/guzzle": "^7.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0"
